<resources>
    <string name="app_name">Servicios ACO</string>
    <string name="IV">r0c8t09cc40s=j9a</string>
    <string name="KEY_TOKEN_API">1e+ertsa97-hsvr2</string>
    <string name="SECRET_API">5f573su1i+=1jt3d</string>
    <string name="key_google_maps">AIzaSyDIjos2N4wYVzGDqJZt8IcIZGWMcQBv4Sw</string>
    <string name="terms">http://serviciosaco.com/terminos-condiciones</string>

    <!--Solicitud de servicio-->
    <string name="dimension_1">50m\u00B2 - 60m\u00B2</string>
    <string name="dimension_2">61m\u00B2 - 70m\u00B2</string>
    <string name="dimension_3">71m\u00B2 - 80m\u00B2</string>
    <string name="dimension_4">80m\u00B2 o más</string>
    <string name="cuadrado">m\u00B2</string>
    <string name="m_extras">M\u00B2 extras</string>

    <string name="dimension_11">Pequeña (50m\u00B2 - 60m\u00B2)</string>
    <string name="dimension_21">Mediana (61m\u00B2 - 70m\u00B2)</string>
    <string name="dimension_31">Grande (71m\u00B2 - 80m\u00B2)</string>
    <string name="dimension_41">Extragrande (80m\u00B2 o más)</string>

    <array name="custom_weekdays">
        <item>D</item>
        <item>L</item>
        <item>M</item>
        <item>M</item>
        <item>J</item>
        <item>V</item>
        <item>S</item>
    </array>

    <!--Solicitud servicio-->
    <string name="titulo_servicio">Servicio de Limpieza General</string>
    <string name="descripcion_servicio">Barrido, trapeado de pisos, desempolve, aspirada de muebles y alfombras, lavado de baños ( No incluye lavado de platos y enceres de cocina, lavada de muebles y alfombras)</string>

    <!--Tour-->
    <string name="tour_boton">¡Empecemos!</string>
    <string name="tour_titulo_1">Solicita el servicio que necesites</string>
    <string name="tour_titulo_2">Programa tu servicio cuando quieras</string>
    <string name="tour_titulo_3">Facilidades de pago</string>
    <string name="tour_subtitulo_1">Elige si quieres limpieza para tu vivienda, finca, oficina o local comercial y gestiona los detalles de tu servicio</string>
    <string name="tour_subtitulo_2">Podrás programar tu servicio para la fecha que quieras y tener control sobre todas las peticiones que realizaste</string>
    <string name="tour_subtitulo_3">Paga online de forma segura, tenemos varias formas de pago a tu disposición para que utilices la que más te convenga</string>
    <string name="title_activity_iniciar_sesion">IniciarSesion</string>

    <!--Olvido Contraseña-->
    <string name="olvido_contraseña_header">Recuperar contraseña</string>
    <string name="olvido_contraseña_titulo">Necesitamos tu e-mail</string>
    <string name="olvido_contraseña_subtitulo">Ingresa tu correo electrónico, te enviaremos un código de confirmación y luego podrás cambiar tu contraseña</string>

    <!--Olvido Contraseña2-->
    <string name="olvido_contraseña2_header">Recuperar contraseña</string>
    <string name="olvido_contraseña2_titulo">Verifica que eres tú</string>
    <string name="olvido_contraseña2_subtitulo">Digita el código de verificación que recibiste en tu correo electrónico</string>
    <string name="olvido_contraseña2_respuesta_edit">El código es correcto</string>
    <string name="olvido_contraseña2_respuesta_edit_2">El código es incorrecto</string>

    <!--Olvido Contraseña3-->
    <string name="olvido_contraseña3_header">Recuperar contraseña</string>
    <string name="olvido_contraseña3_titulo">Crea tu contraseña nueva</string>
    <string name="olvido_contraseña3_subtitulo">Ahora crea tu nueva contraseña, ésta debe tener 8 caracteres como mínimo</string>
    <string name="olvido_contraseña3_respuesta_edit">Las contraseñas coinciden</string>
    <string name="olvido_contraseña3_respuesta_edit_2">Las contraseñas no coinciden</string>
    <string name="title_activity_home">Home</string>

    <!--iniciar sesion2-->
    <string name="iniciar_sesion2_header">Iniciar Sesión</string>
    <string name="iniciar_sesion2_titulo">Bienvenido</string>
    <string name="iniciar_sesion2_subtitulo">Ingresa tus datos para iniciar sesión</string>
    <string name="iniciar_sesion2_olvido_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="title_activity_maps">Map</string>

    <!--Registro-->
    <string name="registro_splash_final">¡Bien hecho! \nHas creado tu cuenta</string>

    <!--Home-->
    <string name="home_ver_perfil"><u>Mi perfil</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_excedentes3">Excedentes3</string>
    <string name="en_caso_de_no_escribir_los_metros_cuadrados_exactos_se_cobrar_la_tarifa_fija_del_rango_de_dimensiones_seleccionado_anteriormente">No conozco los metros cuadrados precisos de mi inmueble</string>
    <string name="descrpcion_serv">En el listado de tipos de inmueble se debe crear un label que mueste una descripción del tipo de servicio que se presta para ese inmueble, ejemplo: Barrido, trapeado, plancahdo, etc.. </string>
    <string name="calificar_encargados">Calificar encargados</string>

    <!--Home-->
    <string name="notifaciones_sin_leer">sin leer</string>

    <!--Nueva dirección-->
    <string name="title_nueva_direccion">Nueva dirección</string>
    <string name="title_editar_direccion">Editar dirección</string>
    <string name="lab_actualizar">Tenemos una nueva actualización disponible. Te recomendamos actualizar la versión antes de continuar.</string>
    <string name="lab_actualizar_ahora">Actualizar ahora</string>
    <string name="lab_actualizar_tarde">Mas tarde</string>
    <string name="lab_espera">¡Espera!</string>

    <!--Tipo servicio-->
    <string name="lan_agregar_servicio">Agregar servicio</string>
    <string name="lab_pregunta_tipo_servicio">¿Qué tipo de servicio necesitas?</string>
    <string name="lab_siguiente">Siguiente</string>
    <string name="lab_regresar_mas_tarde">Parece que no hay nada aquí, por favor regresa más tarde</string>
    <string name="lab_ops">¡Oops!</string>
    <string name="lab_seleccionar_tipo_servicio">Debe elegir un tipo de servicio</string>

</resources>
