<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <!--<ScrollView
        android:visibility="visible"
        android:id="@+id/scrollViewSolicitudServ"
        android:background="@color/fondo_registro"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="25dp"
            android:gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgBotonVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/btn_atras" />

            <co.kubo.indiesco.utils.Medium
                android:id="@+id/tvTituloHeader"
                style="@style/texto_20_morado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="35dp"
                android:text="@string/lan_agregar_servicio" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fondo_registro"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llServices"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <co.kubo.indiesco.utils.Regular
                    style="@style/texto_15_gris"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/lab_pregunta_tipo_servicio" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTipoServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/llNoTipoServicio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/img_missingcontent" />

                    <co.kubo.indiesco.utils.Bold
                        style="@style/texto_22_morado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/lab_ops" />

                    <co.kubo.indiesco.utils.Regular
                        style="@style/texto_15_gris"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:text="@string/lab_regresar_mas_tarde" />


                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rlNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/color_hint_80"
                    android:orientation="horizontal">

                    <co.kubo.indiesco.utils.Medium
                        android:id="@+id/tvValor"
                        style="@style/texto_15_blanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="18dp"
                        android:text="@string/lab_siguiente" />

                    <LinearLayout
                        android:id="@+id/llProgress"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/tvValor"
                        android:layout_alignBottom="@+id/tvValor"
                        android:layout_gravity="start"
                        android:background="@color/color_hint"
                        android:orientation="vertical" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--</ScrollView>-->
</LinearLayout>