<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorBlanco"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="19sp"
        android:orientation="horizontal"
        android:layout_gravity="left"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imgBotonVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/btn_atras" />
        <co.kubo.indiesco.utils.Medium
            android:id="@+id/tvTituloHeader"
            style="@style/texto_20_morado"
            android:layout_marginLeft="35sp"
            android:text="@string/olvido_contraseña3_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:orientation="vertical">
            <co.kubo.indiesco.utils.Bold
                style="@style/texto_22_morado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="85sp"
                android:text="@string/olvido_contraseña3_titulo" />
            <co.kubo.indiesco.utils.Regular
                style="@style/texto_15_gris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48sp"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:gravity="center"
                android:text="@string/olvido_contraseña3_subtitulo" />
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="38sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputPass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorBlanco"
                    app:passwordToggleDrawable="@drawable/icon_selector"
                    app:passwordToggleEnabled="true"
                    android:hint="Contraseña"
                    app:passwordToggleTint="@color/colorBlanco">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editpass1"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    style="@style/texto_15_gris"
                    android:textColorHint="@color/colorVerde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputPass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorBlanco"
                    app:passwordToggleDrawable="@drawable/icon_selector"
                    app:passwordToggleEnabled="true"
                    android:hint="Contraseña"
                    app:passwordToggleTint="@color/colorBlanco">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editpass2"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    style="@style/texto_15_gris"
                    android:textColorHint="@color/colorVerde"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <co.kubo.indiesco.utils.Regular
                    android:id="@+id/tvNotificacionPass"
                    style="@style/texto_15_verde"
                    android:layout_marginTop="15sp"
                    android:gravity="center"
                    android:text="@string/olvido_contraseña3_respuesta_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSiguiente"
        android:src="@drawable/btn_done"
        app:backgroundTint="@color/colorVerde"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_gravity="right|bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>